Fixed white space below slide shows due to siblings having greater height.

--- a/src/styles/components/SlideShow.less
+++ b/src/styles/components/SlideShow.less
@@ -3,14 +3,18 @@
     display: flex;
     flex-direction: row;
     overflow: hidden;
+    // max-height is changed programmatically.
+    transition: max-height 0.1s ease-in-out;
     
     .slideshow-item {
         position: relative;
         left: 0; // This value will be modified in JavaScript with inline-styles to control which slideshow-item is in view.
         transition: left ease-in-out 500ms;
-    
-        &, &.slideshow-item > * {
-            flex: 0 0 auto;
+        flex: 0 0 auto;
+        width: 100%;
+        height: 100%;
+
+        &.slideshow-item > * {
             width: 100%;
             height: 100%;
         }
